--- a/index11.html
+++ b/index11.html
@@ -1,20 +1,42 @@
-<!DOCTYPE html><html><head> <title>Claim It</title> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width, initial-scale=1"> <link rel="stylesheet" href="css/bootstrap.min.css"> <link rel="stylesheet" href="css/main.css" type="text/css"></head><body><div class="section-logo"><img style="width: 187px; padding: 10px 0px 0px; max-width: 500px;" src="img/myBet88Logo1.png" height="72"></div><div class="container"><div class="row phase--1 restrict-width"><div class="col-xs-12"><div class="padding-side"><p class="main-text"><b>مبارک ہو!</b></p><p>ہر ہفتے ہم ایک خوش قسمت فاتح کا انتخاب کریں گے۔ بونس وہیل گھمانے کے لیے 1 سے 10 اکاؤنٹ انعامات جیتنے کے لیے نیچے کلک کریں۔</p></div><button class="gold-btn btn" target="_blank" onclick="startSpin()">spin the wheel</button></div></div><div class="row phase--2 restrict-width"><div class="col-xs-12"><div class="padding-side"><p class="main-text--large"><b>آپ جیت گئے!</b></p><p class="text-large">آپ نے PKR 500 جیتا!<br>جیک پاٹ جیتنے کے اپنے امکانات کو بڑھانے کے لیے۔</p><p class="text-large">ابھی بونس حاصل کریں پر کلک کریں اور ہدایات پر عمل کریں:</p><span class="progressive15 progressive-jackpot-ticker" data-jackpot-id="15">PKR 10,000</span></div><a class="gold-btn btn pixelTrack" href="https://trk.clicksgdi.com/click">GET BONUS NOW</a></div></div><div class="spinner-container"><img class="spinner" src="img/spin_wheel.png"> <img class="pointer" src="img/pointer.png"></div></div><p><script src="js/jquery.min.js"></script><script type="text/javascript"> $(document).ready(function() {
-$(document).progressiveJackpotTicker({});
-});
-function startSpin() {
-$(".phase--1").fadeOut(1000);
-$(".spinner").addClass("spinAround");
-setTimeout(function() {
-setTimeout(function() {
-$(".phase--2").fadeIn(1000);
-}, 200);
-}, 6800);
-}
-</script></p><script language="javascript">window.setTimeout(function(){
-window.location.href = 'https://trk.clicksgdi.com/click';
-},20000);</script> <script>window.history.pushState({page: 1}, '', '');
-window.onpopstate = function(event) {
-if(event){
-window.location.href = 'http://trk.clicksgdi.com/go/a5484a1b-0dec-4fee-b803-b97d39357f67';
-}
-}</script></body></html>
+<!DOCTYPE html><html lang="en"><head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <link rel="stylesheet" href="bootstrap.min.css">
+      <link rel="stylesheet" href="main.css">
+      <link rel="shortcut icon" href="favicon.ico">
+      <title>Win Free PlayStation 5!</title>
+
+       <meta name="robots" content="noindex, nofollow">
+       <meta name="googlebot" content="noindex">
+   </head>
+   <body>
+      
+    <div class="container">
+
+        <div class="row justify-content-center align-items-center text-center">
+
+            <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 text-center TEST">
+
+                <div class="STEP-1 text-center">
+
+                    <img src="logo.png" class="img-fluid w-75 mx-auto mb-2 LOGO">
+
+                    <h2 class="TTU REG">Get <strong class="PSBLUE">a Chance to win a PlayStation 5</strong> for free!</h2>
+
+                    <h6 class="text-center">To enter the draw you need to enter your contact details and shipping address on the next step so we can send you the PlayStation 5. <br><strong>Click button below to continue.</strong></h6>
+
+                    <a href="https://3lo00.bemobtrcks.com/click" class="btn btn-primary btn-lg TTU w-75 mt-2 mx-auto">Continue</a>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <script src="https://my.rtmark.net/p.js?f=sync&amp;lr=1&amp;partner=feb6725e6f839fe39a6339eb34e40f7d0aed386b7f7d9717bed5a541d1c75cc2" defer=""></script>
+    <noscript><img src="https://my.rtmark.net/img.gif?f=sync&lr=1&partner=feb6725e6f839fe39a6339eb34e40f7d0aed386b7f7d9717bed5a541d1c75cc2" width="1" height="1" /></noscript>
+
+   
+<img style="position: absolute; width: 1px; height: 1px; left: 0px; bottom: 0px; opacity: 0;" src="https://my.rtmark.net/img.gif?f=sync&amp;partner=feb6725e6f839fe39a6339eb34e40f7d0aed386b7f7d9717bed5a541d1c75cc2&amp;ttl=&amp;rurl=https%3A%2F%2Fps5.wingreatprize.com%2Fp2%2Fuk%2F"></body></html>
