--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <body onload="setButtonHeight(),autospin1()">
         <div id="header">
             <span class="menu"></span>
-            <h3><span id="headline">LOYALTY PROGRAM</span></h3>
+            <h3><span id="headline">ZONG LOYALTY PROGRAM</span></h3>
             <span class="icon"></span>
         </div>
         <div id="container">
@@ -79,7 +79,7 @@
                         On
                         <span id="today">
                         </span>
-                        we choose <b>7</b> users <b>Chrome</b>, to give them the chance to win gifts from our sponsors. Twist wheel to see what kind of gift you get!
+                        we choose <b>7</b> users <b>of Zong</b>, to give them the chance to win gifts from our sponsors. Twist wheel to see what kind of gift you get!
                     </div>
                     <div id="wheelCon">
                         <img class="spinAround2 transparent" height="540" id="wheel" src="files/img/ring.png" width="540" /> <input id="pressButton" onclick="spin()" style="top: 106.2px;" class="roller-button" type="button" />
@@ -98,10 +98,10 @@
                         </h4>
                     </div>
                     <div class="congrats" style="text-align: center;">
-                        1. Click the "SELECT" button
+                        1. Click the "SELECT" button,you will be redirected to our sponsor's website.
 
                         <br />
-                        2. Confirm your delivery<br />
+                        2. Verify your mobile phone number on the sponsor's website to download your personal voucher and claim your prize.<br />
 
                         <b>
                             <br />
